--- a/src/style.css
+++ b/src/style.css
@@ -1,28 +1,31 @@
 html, body {
-    /* background-color: #fbfef9; */
+    /* background-color: black; */
     font-family: monospace;
     height: 100%;
     margin: 0px;
-    color: #bf1363;
+    color: white;
     /* border: 1px solid purple; */
 }
 
 #root {
-    height: 100%;
+    min-height: 100%;
     margin: 0px;
-    /* border: 1px solid purple; */
+    display: flex;
+    justify-content: center;
+    border: 5px solid purple;
 }
 
 #mainContainer {
-    background-image: url("./graphics/merlin_135847308_098289a6-90ee-461b-88e2-20920469f96a-jumbo.webp");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    background-color: rgba(25, 25, 35, .2);
-    margin: 0px;
     display: flex;
     flex-direction: column;
-    height: 100%;
+    background-image: url("./graphics/merlin_135847308_098289a6-90ee-461b-88e2-20920469f96a-jumbo.webp");
+    background-repeat: no-repeat;
+    /* background-attachment: fixed; */
+    background-color: black;
+    margin: 0px;
+    min-height: 100%;
+    max-width: 1024px;
+    border: 5px solid yellow;
 }
 
 h1 {
@@ -54,7 +57,7 @@ label {
     border: 0px;
 }
 
-#submitButton {
+button, #submitButton {
     width: 10%;
     margin: auto;
     margin-bottom: 10px;
@@ -62,7 +65,7 @@ label {
 
 #responseContainer {
     display: flex;
-    height: 60%;
+    /* height: 60%; */
     flex-direction: column;
     justify-content: space-around;
     background-color: rgba(14,121,178,.5);
@@ -74,8 +77,8 @@ label {
     display: flex;
     flex-direction: column;
     background-color: rgba(25,25,35,.5);
-    margin: 5px 20px;
-    border: 1px solid yellow;
+    border-radius: 5px;
+    margin: 10px 20px;
 }
 
 .responses p {
