--- a/src/style.css
+++ b/src/style.css
@@ -98,9 +98,12 @@ button:hover, #submitButton:hover {
 }
 
 .promptP {
-    margin-top: 20px;
+    margin: 20px 10px;
+    margin-bottom: 0px;
 }
 
 .responseP {
-    margin-bottom: 20px;
+    margin: 20px 10px;
+    margin-top: 0px;
+
 }
